<resources>
    <string name="app_name">Emevest</string>
    <string name="caption">SAVE \u0020 \u0020 INVEST \u0020 \u0020 GROW</string>
    <string name="tvText"> 100% Secured </string>
    <string name="homeTitle"> Save Efficiently </string>
    <string name="homeText"> Save money into customizable and prebuilt portfolios, which are built over thousand of stocks. </string>
    <string name="createAccountText"> Create a Account </string>
    <string name="homeBottomText"> Already have an Emevest Account </string>
    <string name="homeBottomLogin"> Login </string>
    <string name="signUpFirstText"> This number will be used to send you regular updates and notification about your trading account. </string>
    <string name="phoneNumberText"> Phone No. </string>
    <string name="otpText"> OTP </string>
    <string name="signUpSecondTitle"> Create a Password </string>
    <string name="passwordText"> Create Password </string>
    <string name="retypePasswordText"> Re-enter Password </string>
    <string name="signUpThirdTitle"> Aadhar EKYC to e-sign </string>
    <string name="signUpThirdText"> Use your Aadhar (mobile OTP) to digitally sign the application form online instantly. </string>
    <string name="loginTitle"> Log in </string>
    <string name="loginScreenPasswordText"> Password </string>
    <string name="loginBottomText"> Forgot Password? \u0020 Get help here </string>
    <string name="forgotPasswordTitle"> Forgot Password </string>
    <string name="forgotPasswordText"> Enter your Emevest registered Phone number, that you used to register. We will send you an sms to recover your account. </string>
    <string name="sendText"> Send </string>



</resources>
