<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/homeText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#1658A9"
            android:elevation="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:stateListAnimator="@null"
            android:text="@string/createAccountText"
            android:textColor="#fff"
            android:textStyle="bold"
            android:translationZ="2dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_account_button"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_bottom_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeBottomText"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/home_bottom_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/homeBottomLogin"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="13sp" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
