<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:id="@+id/above_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAccountText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/sign_up_first_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpFirstText"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/above_text"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/phoneNumberText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="phone"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/otp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/otpText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:ems="2"
            android:inputType="numberSigned"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>


    </android.support.design.widget.TextInputLayout>




</RelativeLayout>
