<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:id="@+id/above_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswordText"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/above_text"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/phoneNumberText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="phone"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>


    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_text_phone"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_button"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:stateListAnimator="@null"
            android:text="@string/sendText"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            />

    </RelativeLayout>


</RelativeLayout>
