<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:id="@+id/above_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_second_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpSecondTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/above_text"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/phoneNumberText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:ems="10"
            android:inputType="phone"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/edit_text_phone"
        android:orientation="vertical">


        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/passwordText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_text_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@+id/edit_text_create_password"
        android:orientation="vertical">


        <TextView
            android:id="@+id/retype_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/retypePasswordText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingStart="30dp"
            />

        <EditText
            android:id="@+id/retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:textSize="35sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>


    </android.support.design.widget.TextInputLayout>




</RelativeLayout>
